deploy/kubernetes/overlays/local/console-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifact-gateway-console
spec:
  type: LoadBalancer
  ports:
    - $patch: replace
    - name: http
      port: 18081
      targetPort: http
